--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center>
-<h1>This-is-a-Heading</h1>
+<h1>This is Elad Test Push</h1>
 <p>This-----------------paragraph.</p>
 <a href="page.html">
 <img src="logo.png" alt="rt-logo" style="width:400px;height:400px;" >
